solved body on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,6 @@
 }
 html {
 	background-repeat: no-repeat;
-	min-height: 100vh;
 	background-position: var(--backgroundPosition);
 	background-color: var(--background);
 	background-image: var(--backgroundImg);
